Bug 1648326 - Don't dispatch runnable on the running taskqueue. r=bobowen,jld

The current taskqueue is blocked until the current function has finished; Running the event loop would only process events on the running thread.

Additionally, we make mIPCLaunchThread an nsISerialEventTarget to guarantee that at shutdown the tasks are run in order regardless of the IPC Launch Thread type.

Differential Revision: https://phabricator.services.mozilla.com/D81511