security/sandbox/win/src/remotesandboxbroker/RemoteSandboxBrokerParent.cpp
@@ -12,7 +12,7 @@
 namespace mozilla {
 
 RefPtr<GenericPromise> RemoteSandboxBrokerParent::Launch(
-    const nsTArray<uint64_t>& aHandlesToShare) {
+    const nsTArray<uint64_t>& aHandlesToShare, nsISerialEventTarget* aThread) {
   MOZ_ASSERT(!mProcess);
   if (mProcess) {
     // Don't re-init.
@@ -45,8 +45,8 @@ RefPtr<GenericPromise> RemoteSandboxBrokerParent::Launch(
     return GenericPromise::CreateAndReject(NS_ERROR_FAILURE, __func__);
   };
 
-  return mProcess->AsyncLaunch()->Then(GetCurrentSerialEventTarget(), __func__,
-                                       std::move(resolve), std::move(reject));
+  return mProcess->AsyncLaunch()->Then(aThread, __func__, std::move(resolve),
+                                       std::move(reject));
 }
 
 bool RemoteSandboxBrokerParent::DuplicateFromLauncher(HANDLE aLauncherHandle,
