security/sandbox/win/src/remotesandboxbroker/remoteSandboxBroker.h
@@ -56,7 +56,7 @@ class RemoteSandboxBroker : public AbstractSandboxBroker {
   // We bind the RemoteSandboxBrokerParent to the IPC launch thread.
   // As such, we must close its channel on the same thread. So we save
   // a reference to the IPC launch thread here.
-  nsCOMPtr<nsIEventTarget> mIPCLaunchThread;
+  nsCOMPtr<nsISerialEventTarget> mIPCLaunchThread;
 
   // True if we've been shutdown.
   bool mShutdown = false;
